--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -1,5 +1,5 @@
 <div class="container-fluid mt-5">
     <div class="row d-flex justify-content-center main-color-bg">
-        <span>Developed By</span><span>Ajith D</span>
+        <a class="text-light badge" href="https://github.com/mr-speedster">Developed By Ajith D</a>
     </div>
 </div>
